@@ -1,8 +1,8 @@
-pkgbase = nidaqmx-dummy
+pkgbase = nidaqmx-source-support-dummy
 	pkgdesc = Dummy library to compile and link code using NI DAQmx under Linux
 	pkgver = 0.1
 	pkgrel = 2
-	url = http://doesnotexist.sourceforge.net/
+	url = https://aur.archlinux.org/pkgbase/nidaqmx-source-support-dummy
 	changelog = ChangeLog
 	arch = i686
 	arch = x86_64
@@ -12,7 +12,7 @@ pkgbase = nidaqmx-dummy
 	arch = aarch64
 	license = GPL3
 	depends = glibc
-	source = NSSDfile://nidaqmx-dummy-0.1.tar.gz
+	source = NSSDfile://nidaqmx-source-support-dummy-0.1.tar.gz
 	sha512sums = SKIP
 
-pkgname = nidaqmx-dummy
+pkgname = nidaqmx-source-support-dummy
