@@ -1,6 +1,9 @@
 
 ChangeLog for nidaqmx-dummy PKGBUILD
 
+* nidaqmx-source-support-dummy-0.0.1-2 (2022-05-05 - AstroFloyd)
+	Rename package nidaqmx-dummy -> nidaqmx-source-support-dummy.
+
 * nidaqmx-dummy-0.0.1-2 (2022-05-05 - AstroFloyd)
 	Make clear in the PKGBUILD how to obtain the source.
 
